Added mapstruct dependencies